src/test/ui/not-clone-closure.stderr
error[E0277]: the trait bound `S: std::clone::Clone` is not satisfied in `(S,)`
  --> $DIR/not-clone-closure.rs:11:23
   |
LL |     let hello = hello.clone(); //~ ERROR the trait bound `S: std::clone::Clone` is not satisfied
   |                       ^^^^^ within `(S,)`, the trait `std::clone::Clone` is not implemented for `S`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
